# echa-cli

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
echa_mcp/: __init__.py  cli.py  server.py
echa_mcp/clients/: __init__.py  echa_client.py
echa_mcp/data/: __init__.py  hcode_mapping.py
echa_mcp/models/: __init__.py  classification.py  substance.py  toxicology.py
echa_mcp/parsers/: __init__.py  common.py  section2_parser.py  section7_parser.py
echa_mcp/tools/: __init__.py  clp_classification.py  harmonised_classification.py  reach_classification.py  substance.py  toxicology.py
