[project]
name = "echa-mcp"
version = "1.0.0"
description = "ECHA Chemical Data MCP Server - 欧洲化学品数据查询服务"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
echa-mcp = "echa_mcp.server:main"
