[project]
name = "echa-cli"
version = "1.0.0"
description = "ECHA Chemical Data CLI — query European Chemicals Agency data from the command line or MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MagaritaZhu" },
]
keywords = ["echa", "chemistry", "cli", "classification", "clp", "reach", "toxicology", "ghs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/RmMargt/echa-cli"
Repository = "https://github.com/RmMargt/echa-cli"
Issues = "https://github.com/RmMargt/echa-cli/issues"

[project.scripts]
echa-mcp = "echa_mcp.server:main"
echa-cli = "echa_mcp.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
